rename to HsqlEmbeddedServer to differentiate between in memory